--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.11.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
